--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   "bugs": {
     "url": "https://github.com/rodbe-io/ghx/issues"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@inquirer/checkbox": "^4.1.1",
+    "@inquirer/select": "^4.0.8",
+    "@rodbe/check-updates": "^1.3.0",
+    "@rodbe/fn-utils": "^1.5.0",
+    "@rodbe/github-api": "^1.1.1"
+  },
   "description": "Clone GitHub repositories",
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
