--- a/package.json
+++ b/package.json
@@ -12,12 +12,11 @@
     "url": "https://github.com/rodbe-io/ghx/issues"
   },
   "dependencies": {
-    "@inquirer/checkbox": "^4.1.1",
-    "@inquirer/input": "^4.1.5",
     "@inquirer/select": "^4.0.8",
     "@rodbe/check-updates": "^1.3.0",
     "@rodbe/fn-utils": "^1.5.0",
-    "@rodbe/github-api": "^1.1.1"
+    "@rodbe/github-api": "^1.1.1",
+    "inquirer-select-pro": "1.0.0-alpha.9"
   },
   "description": "Clone GitHub repositories",
   "devDependencies": {
