--- a/package.json
+++ b/package.json
@@ -1,15 +1,49 @@
 {
+  "name": "@rodbe/ghx",
+  "version": "1.8.0",
+  "description": "Clone GitHub repositories with a friendly CLI",
+  "keywords": [
+    "front-end",
+    "RBX",
+    "typescript",
+    "cli",
+    "cli-app",
+    "cli-tool",
+    "unix",
+    "GitHub"
+  ],
+  "homepage": "https://github.com/rodbe-io/ghx",
+  "bugs": {
+    "url": "https://github.com/rodbe-io/ghx/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rodbe-io/ghx.git"
+  },
+  "license": "MIT",
   "author": "KevinRodbe",
+  "type": "module",
   "bin": {
     "ghx": "./dist/commands/ghx.js"
+  },
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "prebuild": "pnpm run type-check",
+    "build": "pkgroll",
+    "commit": "git-cz",
+    "commitlint": "commitlint --edit",
+    "prepare": "husky || true",
+    "release": "semantic-release",
+    "start": "pkgroll --watch",
+    "test:unit": "vitest run",
+    "type-check": "tsc --noEmit"
   },
   "config": {
     "commitizen": {
       "path": "@commitlint/cz-commitlint"
     }
-  },
-  "bugs": {
-    "url": "https://github.com/rodbe-io/ghx/issues"
   },
   "dependencies": {
     "@inquirer/select": "^4.0.8",
@@ -19,7 +53,6 @@
     "chalk": "^5.4.1",
     "inquirer-select-pro": "1.0.0-alpha.9"
   },
-  "description": "Clone GitHub repositories",
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
@@ -27,6 +60,8 @@
     "@commitlint/format": "^19.5.0",
     "@commitlint/types": "^19.5.0",
     "@eslint/js": "^9.17.0",
+    "@eslint/json": "^0.10.0",
+    "@rodbe/prettier-config": "^1.3.0",
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/commit-analyzer": "^9.0.2",
     "@semantic-release/git": "10.0.1",
@@ -39,60 +74,30 @@
     "conventional-changelog-conventionalcommits": "5.0.0",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-package-json": "^0.19.0",
+    "eslint-plugin-package-json": "^0.26.0",
     "eslint-plugin-prettier": "^5.2.1",
     "husky": "^9.1.7",
     "nano-staged": "^0.8.0",
     "pkgroll": "^2.4.1",
-    "prettier": "^3.3.3",
+    "prettier": "^3.5.1",
+    "prettier-plugin-curly": "^0.3.1",
+    "prettier-plugin-packagejson": "^2.5.8",
     "semantic-release": "20.1.0",
     "typescript": "^5.2.2",
     "typescript-eslint": "^8.19.0",
     "vitest": "^2.0.5"
   },
+  "packageManager": "pnpm@9.15.2",
   "engines": {
     "node": ">= 18.18.2",
     "npm": ">= 8.11.0",
     "pnpm": ">= 9.15.2"
   },
-  "enginesStrict": true,
-  "files": [
-    "dist"
-  ],
-  "homepage": "https://github.com/rodbe-io/ghx",
-  "keywords": [
-    "front-end",
-    "RBX",
-    "typescript",
-    "cli",
-    "cli-app",
-    "cli-tool",
-    "unix"
-  ],
-  "license": "MIT",
-  "name": "@rodbe/ghx",
-  "packageManager": "pnpm@9.15.2",
+  "volta": {
+    "node": "18.18.2"
+  },
   "publishConfig": {
     "access": "public"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rodbe-io/ghx.git"
-  },
-  "scripts": {
-    "build": "pkgroll",
-    "commit": "git-cz",
-    "commitlint": "commitlint --edit",
-    "prebuild": "pnpm run type-check",
-    "prepare": "husky || true",
-    "release": "semantic-release",
-    "start": "pkgroll --watch",
-    "test:unit": "vitest run",
-    "type-check": "tsc --noEmit"
-  },
-  "type": "module",
-  "version": "1.8.1",
-  "volta": {
-    "node": "18.18.2"
-  }
+  "enginesStrict": true
 }
