--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@eslint/js": "^9.17.0",
     "@eslint/json": "^0.10.0",
     "@rodbe/prettier-config": "^1.3.0",
+    "@rodbe/tsconfig": "^1.0.1",
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/commit-analyzer": "^9.0.2",
     "@semantic-release/git": "10.0.1",
